Chl algorithms done!

--- a/Acronyms.tex
+++ b/Acronyms.tex
@@ -27,7 +27,11 @@
 
 \newacronym{mobelm}{MoB-ELM}{model-based empirical line method}
 
+\newacronym{oc2}{OC2}{Ocean Chlorophyll 2-band}
+
 \newacronym{oc3}{OC3}{Ocean Chlorophyll 3-band}
+
+\newacronym{oc4}{OC4}{Ocean Chlorophyll 4-band}
 
 \newacronym{lut}{LUT}{look-up-table}
 
@@ -48,4 +52,8 @@
 \newacronym{b_boverb}{$b_b/b$}{backscattering fraction}
 
 \newacronym{rte}{RTE}{radiative transfer equation}
+
+\newacronym{obpg}{OBPG}{Ocean Biology Processing Group}
+
+\newacronym{mcp}{MCP}{modified cubic polynomial equation}
 
