Changed path in Intro and Background.

--- a/Introduction.tex
+++ b/Introduction.tex
@@ -39,4 +39,4 @@ After having atmospherically corrected the image, the next step is to apply a re
 In order to have outputs that are representative of the water bodies that are being studied, \acrfull{iops} of those specific waters have to be input to the HydroLight model. To accomplish this, collections of water samples were conducted at the same time that the Landsat 8 satellite passed over the area of study (the Rochester Embayment, Rochester, NY). After collection, these water samples were analyzed in the lab to obtain the IOPs for the CPAs. Furthermore, \acrfull{aops}, specifically remote-sensing reflectances, and backscattering measurements were also collected for further comparison and to pursue closure between HydroLight AOP results and {\it in situ} AOP measurements.
 
 % Data Collection and Lab Measurements
-The concentration of CPAs obtained from the retrieval algorithm are validated by comparison with concentration measured in the lab from {\it in situ} water samples collected from water bodies present in the Landsat 8 image. Also, the chlorophyll-{\it a} retrieval is compared with the NASA's standard algorithms \cite{OReilly2000,Hu:2012fv}
+The concentration of CPAs obtained from the retrieval algorithm are validated by comparison with concentration measured in the lab from {\it in situ} water samples collected from water bodies present in the Landsat 8 image. Also, the chlorophyll-{\it a} retrieval is compared with the NASA's standard algorithms \cite{OReilly1998_Chl,OReilly2000,Hu:2012fv}.
