--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -1,5 +1,5 @@
 % \documentclass[draft]{book}
-\documentclass[draft]{book}
+\documentclass[]{book}
 
 \usepackage{graphicx}
 
@@ -150,7 +150,7 @@
 % Added 11-15-13 ----------------------------------------
 % \includeonly{Acronyms,Introduction,Objectives,Background_and_Theory,Methodology,Results,Summary,Appendix} 
 % \includeonly{Background_and_Theory} 
-\includeonly{Acronyms,Introduction} 
+\includeonly{Acronyms,Introduction,Objectives,Background_and_Theory} 
 \usepackage{tikz} % for flow charts
   \usetikzlibrary{shapes,shapes.geometric,arrows,positioning,shadows,calc}
 
@@ -364,7 +364,7 @@ Mis amados viejitos, Osvaldo Concha Silva and Nelly del Carmen Sep\'ulveda Reyes
 %\bibliographystyle{unsrtnat}
 \bibliographystyle{apalike}
 
-\bibliography{C:/Users/Aixa/Documents/Javier/Latex/Latex/javier_bib}
+\bibliography{C:/Users/Aixa/Documents/Javier/Latex/javier_bib}
 
 \printindex
 
