--- a/Background_and_Theory.tex
+++ b/Background_and_Theory.tex
@@ -22,7 +22,7 @@ where:\\
 
 \begin{figure}[htb]
   \centering
-  \includegraphics[height=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/20123_Spring/Modeling/HydroLight/Beamer/RadianceDef.png}
+  \includegraphics[height=8cm]{C:/Users/Aixa/Documents/Javier/20123_Spring/Modeling/HydroLight/Beamer/RadianceDef.png}
 \caption{Radiance (Note: image taken from \cite{Mobley:2001})}
 \label{fig:radiance} 
 \end{figure}
@@ -86,7 +86,7 @@ So, the $E_S'$ is calculated assuming that the flux $\Phi$ comes from a point so
 
 \begin{figure}[htb]
   \centering
-  \includegraphics[height=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/MODIS_ATM_solar_irradiance.png}
+  \includegraphics[height=8cm]{C:/Users/Aixa/Documents/Javier/Latex/Proposal/Images/MODIS_ATM_solar_irradiance.png}
 \caption{Exoatmospheric irradiance as a function of wavelength (green curve) and solar spectral irradiance transmitted through the  atmosphere to the the Earth's surface (brown curve). MODIS bands shown (orange).  (Source: \protect\url{http://commons.wikimedia.org/wiki/File:MODIS_ATM_solar_irradiance.svg}).}
 \label{fig:exoirrad} 
 \end{figure}
@@ -104,7 +104,7 @@ When the target is the water column, we can discard the type G photons over open
 
 \begin{figure}[htb]
   \centering
-  \includegraphics[height=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/PathsVisio.png}
+  \includegraphics[height=8cm]{C:/Users/Aixa/Documents/Javier/Latex/Proposal/Images/PathsVisio.png}
 \caption{Photon path contributions to the sensor-reaching radiance in the reflective portion of the spectrum.}
 \label{fig:paths} 
 \end{figure}
@@ -147,7 +147,7 @@ Each contribution previously described could be relevant by itself, depending of
 
 \begin{figure}[htb]
   \centering
-  \includegraphics[height=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/WaterRadianceFixed.png}
+  \includegraphics[height=8cm]{C:/Users/Aixa/Documents/Javier/Latex/Proposal/Images/WaterRadianceFixed.png}
 \caption{Contribution to the sensor reaching radiance $L_s$ above the water surface. Thick arrows represent single-scattering contributions; thin arrows represent multiple scattering contributions (Source: \protect\url{http://www.oceanopticsbook.info/}).}
 \label{fig:watercontribution} 
 \end{figure}
@@ -157,7 +157,7 @@ Once the incident energy is transmitted through the water surface, i.e. $L_w$ in
 
 \begin{figure}[htb]
   \centering
-      \includegraphics[width=100mm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/WaterColumn.eps}
+      \includegraphics[width=100mm]{C:/Users/Aixa/Documents/Javier/Latex/Proposal/Images/WaterColumn.eps}
   \caption{Contributions to sensor-reaching radiance from the water column.}
   \label{fig:WaterColumn}
 \end{figure}
@@ -173,7 +173,7 @@ where $S_{CDOM}$ is spectral slope and $\lambda_0$ is the reference wavelength. 
 
 \begin{figure}[htb]
 \centering
-      \includegraphics[height=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/20123_Spring/Modeling/HydroLight/Beamer/AbsCoeff.png}
+      \includegraphics[height=9cm]{C:/Users/Aixa/Documents/Javier/20123_Spring/Modeling/HydroLight/Beamer/AbsCoeff.png}
       \caption{Contribution by the various components to the absorption coefficient (Note: image taken from \cite{Mobley:2001}).}
       \label{fig:compabs}
 \end{figure}
@@ -186,7 +186,7 @@ where $S_{NAP}$ is the exponential slope for NAP, which could be estimated from 
 
 \begin{figure}[htb]
 \centering
-      \includegraphics[height=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/20123_Spring/Modeling/HydroLight/Beamer/ScatCoeff.png}
+      \includegraphics[height=9cm]{C:/Users/Aixa/Documents/Javier/20123_Spring/Modeling/HydroLight/Beamer/ScatCoeff.png}
       \caption{Contribution by the various components to the scattering coefficient (Note: image taken from \cite{Mobley:2001}).}
       \label{fig:compscat}
 \end{figure}
@@ -195,14 +195,14 @@ Path $IV$ shows the case of scattering and absorption of light by pure water, wh
 
 \begin{figure}[!ht]
   \centering
-      \includegraphics[width=12cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/Absorption_spectrum_of_liquid_water.png}
+      \includegraphics[width=12cm]{C:/Users/Aixa/Documents/Javier/Latex/Proposal/Images/Absorption_spectrum_of_liquid_water.png}
   \caption{Pure water absorption coefficient spectrum. Source: \protect\url{http://en.wikipedia.org/wiki/Electromagnetic_absorption_by_water}}
   \label{fig:WaterAbs1}
 \end{figure}
 
 \begin{figure}[!ht]
   \centering
-      \includegraphics[width=10cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/WaterAbsorption.png}
+      \includegraphics[width=10cm]{C:/Users/Aixa/Documents/Javier/Latex/Proposal/Images/WaterAbsorption.png}
   \caption{Pure water absorption coefficients on a semilog scale [Pope and Frye, 1992].  Source: \protect\url{http://www.oceanopticsbook.info/}}
   \label{fig:WaterAbs2}
 \end{figure}
@@ -210,7 +210,7 @@ Path $IV$ shows the case of scattering and absorption of light by pure water, wh
 
 \begin{figure}[!ht]
   \centering
-      \includegraphics[width=10cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/WaterScattAbs.png}
+      \includegraphics[width=10cm]{C:/Users/Aixa/Documents/Javier/Latex/Proposal/Images/WaterScattAbs.png}
   \caption{Pure sea water absorption (solid line)  and scattering (dotted line) coefficients [Smith and Baker, 1981]. Source: \cite{Mobley1994}}
   \label{fig:WaterScat1}
 \end{figure}
@@ -298,7 +298,7 @@ Mie scattering is characterized by an angular distribution predominately in the 
 
 \begin{figure}[htb]
   \centering
-      \includegraphics[width=14cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/ScatPhaseFn.png}
+      \includegraphics[width=14cm]{C:/Users/Aixa/Documents/Javier/Latex/Proposal/Images/ScatPhaseFn.png}
   \caption{Polar plot of scattering phase function. Source: \cite{Schott}}
   \label{fig:ScatPhFn}
 \end{figure}
@@ -407,7 +407,7 @@ The {\it inherent optical properties}\index{IOPs: inherent optical properties} (
 
 \begin{figure}[htb]
 \centering
-\includegraphics[height=5cm]{/Users/javier/Desktop/Javier/PHD_RIT/20123_Spring/Modeling/HydroLight/Beamer/IOPgeo.png}
+\includegraphics[height=5cm]{C:/Users/Aixa/Documents/Javier/20123_Spring/Modeling/HydroLight/Beamer/IOPgeo.png}
 \caption{Geometry used to define IOPs (Note: image taken from \cite{Mobley:2001}). \label{fig:IOPsdef} } 
 \end{figure}
 
@@ -447,7 +447,7 @@ with $\Delta V=\Delta r\Delta A$. This last definition is the reason why it is c
 
 \begin{figure}[htb]
 \centering
-      \includegraphics[height=5cm]{/Users/javier/Desktop/Javier/PHD_RIT/20123_Spring/Modeling/HydroLight/Beamer/VSFweb.png}
+      \includegraphics[height=5cm]{C:/Users/Aixa/Documents/Javier/20123_Spring/Modeling/HydroLight/Beamer/VSFweb.png}
       \caption{Examples of VSF for different waters: open ocean water (blue curve), harbor (green curve) and very productive coastal water (red curve). $\lambda$ was set equal to $514nm$ (Note: image taken from \cite{Mobley:2001})}
       \label{fig:VSFex}
 \end{figure}
@@ -491,7 +491,7 @@ The connection between the IOPs, boundary conditions, and light sources (e.g. bi
 
 \begin{figure}[htb]
 \centering
-      \includegraphics[height=6cm]{/Users/javier/Desktop/Javier/PHD_RIT/20123_Spring/Modeling/HydroLight/Beamer/RTE1.png}
+      \includegraphics[height=6cm]{C:/Users/Aixa/Documents/Javier/20123_Spring/Modeling/HydroLight/Beamer/RTE1.png}
       \caption{Single beam of radiance and the processes that affect it as it propagates a distance $\Delta r$ (Source: \protect\url{http://www.oceanopticsbook.info/}).}
       \label{fig:RTE1}
 \end{figure}
@@ -535,7 +535,7 @@ which is more convenient to use in oceanography because it depends on the depth 
 
 % \begin{figure}[htb]
 % \centering
-%       \includegraphics[height=6cm]{/Users/javier/Desktop/Javier/PHD_RIT/20123_Spring/Modeling/HydroLight/Beamer/RTE2.png}
+%       \includegraphics[height=6cm]{C:/Users/Aixa/Documents/Javier/20123_Spring/Modeling/HydroLight/Beamer/RTE2.png}
 %       \caption{(Note: image taken from \hl{Ocean Optics Book})}
 % \end{figure}
 % ----------------------------------------------------
@@ -608,7 +608,7 @@ Landsat 8 is an optical passive satellite, which means it records the energy ref
 
 \begin{figure}[htb]
 \centering
-      \includegraphics[height=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/OLIbands.jpg}
+      \includegraphics[height=7cm]{C:/Users/Aixa/Documents/Javier/Latex/Proposal/Images/OLIbands.jpg}
       \caption{Landsat 8 bands compared with Landsat 7 bands (Source: \protect\url{http://landsat.gsfc.nasa.gov/}).}
       \label{fig:olibands}
 \end{figure}
@@ -617,7 +617,7 @@ OLI has a spatial resolution of $30m$ in all seven bands, the same as previous L
 
 \begin{figure}[htb]
   \centering
-  \includegraphics[height=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/NESSF14/latex/ResolComp.pdf}
+  \includegraphics[height=4cm]{C:/Users/Aixa/Documents/Javier/ConferencesAndApplications/NESSF14/latex/ResolComp.pdf}
   \caption{Spatial resolution comparison between Terra-MODIS (500m) and Landsat 8 (30m). \label{fig:resol} } 
 \end{figure}
 
@@ -642,7 +642,7 @@ Although the OLI's spectral bands are not narrow enough to be compared with MODI
 
 \begin{figure}[htb]
 \centering
-      \includegraphics[height=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/L8SNR_2.eps}
+      \includegraphics[height=6.5cm]{C:/Users/Aixa/Documents/Javier/Latex/Proposal/Images/L8SNR_2.eps}
       \caption{Comparison between Landsat 7 and Landsat 8 SNR. \label{fig:L8SNR} } 
       \label{fig:olisnr}
 \end{figure}
@@ -748,14 +748,14 @@ HydroLight is a radiative transfer numerical model written in Fortran \cite{Mobl
 % \begin{figure}[H]
 % \begin{columns}[onlytextwidth] % contents are top vertically aligned
 % 	\column{.35\textwidth}
-%   		\includegraphics[height=3cm]{/Users/javier/Desktop/Javier/PHD_RIT/20123_Spring/Modeling/HydroLight/Beamer/absvsz.png}
+%   		\includegraphics[height=3cm]{C:/Users/Aixa/Documents/Javier/20123_Spring/Modeling/HydroLight/Beamer/absvsz.png}
 %   	\column{.32\textwidth}
 %   	\footnotesize
 %   		\begin{equation}
 %   			\cos\theta\frac{dL(z,\theta,\varphi,\lambda)}{dz}=\cdots \notag
 %   		\end{equation}
 % 	\column{.35\textwidth} 
-% 		\includegraphics[height=3cm]{/Users/javier/Desktop/Javier/PHD_RIT/20123_Spring/Modeling/HydroLight/Beamer/RadSpec.png}
+% 		\includegraphics[height=3cm]{C:/Users/Aixa/Documents/Javier/20123_Spring/Modeling/HydroLight/Beamer/RadSpec.png}
 % \end{columns}
 % \end{figure}
 \todo{Try to fix fig and talk about it.}
@@ -828,14 +828,14 @@ The \gls{oc2} algorithm utilized just a green and a blue band. Modifications to 
 \begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
     \centering
-      \includegraphics[height=6cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPHD/Images/OC2v4}  
+      \includegraphics[height=6cm]{C:/Users/Aixa/Documents/Javier/Latex/ThesisPHD/Images/OC2v4}  
     % \vspace{1.5cm}
     \centerline{(a)}\medskip
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
-      \includegraphics[height=6cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPHD/Images/OC4v4}
+      \includegraphics[height=6cm]{C:/Users/Aixa/Documents/Javier/Latex/ThesisPHD/Images/OC4v4}
     % \vspace{1.5cm}
     \centerline{(b)}\medskip
   \end{minipage}
@@ -859,50 +859,50 @@ One of the known limitations of the approach is that the data set is mostly repr
 
 \begin{figure}[htb]
 \centering
-      \includegraphics[width=12cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPHD/Images/OCedu_CDOMfixed}
+      \includegraphics[width=12cm]{C:/Users/Aixa/Documents/Javier/Latex/ThesisPHD/Images/OCedu_CDOMfixed}
       \caption{.\label{fig:CDOMfixed} } 
 \end{figure}
 
 \begin{figure}[htb]
 \centering
-      \includegraphics[width=12cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPHD/Images/OCedu_TSSfixed}
+      \includegraphics[width=12cm]{C:/Users/Aixa/Documents/Javier/Latex/ThesisPHD/Images/OCedu_TSSfixed}
       \caption{.\label{fig:TSSfixed} } 
 \end{figure}
 
 \begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
     \centering
-      \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPHD/Images/OCedu_CHLfixedlow.png}
+      \includegraphics[width=8cm]{C:/Users/Aixa/Documents/Javier/Latex/ThesisPHD/Images/OCedu_CHLfixedlow.png}
     \end{minipage}
       % \caption{.\label{fig:OCedu_CHLfixedlow} } 
    \hfill   
    \begin{minipage}[c]{0.48\linewidth}
     \centering
-      \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPHD/Images/OCedu_CHLfixedmed.png}
+      \includegraphics[width=8cm]{C:/Users/Aixa/Documents/Javier/Latex/ThesisPHD/Images/OCedu_CHLfixedmed.png}
   \end{minipage}    
       % \caption{.\label{fig:OCedu_CHLfixedmed} } 
   \begin{minipage}[c]{1.0\linewidth}
     \centering
-      \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPHD/Images/OCedu_CHLfixedhigh.png}
+      \includegraphics[width=8cm]{C:/Users/Aixa/Documents/Javier/Latex/ThesisPHD/Images/OCedu_CHLfixedhigh.png}
   \end{minipage}    
       \caption{.\label{fig:OCedu_CHLfixed} }
 \end{figure}
 
 \begin{figure}[htb]
 \centering
-      \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPHD/Images/ChlStandardFixed.png}
+      \includegraphics[width=8cm]{C:/Users/Aixa/Documents/Javier/Latex/ThesisPHD/Images/ChlStandardFixed.png}
       \caption{.\label{fig:ChlStandardFixed} } 
 \end{figure}
 
 \begin{figure}[htb]
 \centering
-      \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPHD/Images/ChlStandardNoFixed.png}
+      \includegraphics[width=8cm]{C:/Users/Aixa/Documents/Javier/Latex/ThesisPHD/Images/ChlStandardNoFixed.png}
       \caption{.\label{fig:ChlStandardNoFixed} } 
 \end{figure}
 
 \begin{figure}[htb]
 \centering
-      \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPHD/Images/SmallConcImpact.png}
+      \includegraphics[width=8cm]{C:/Users/Aixa/Documents/Javier/Latex/ThesisPHD/Images/SmallConcImpact.png}
       \caption{.\label{fig:SmallConcImpact} } 
 \end{figure}
 
