--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -1,5 +1,5 @@
 % \documentclass[draft]{book}
-\documentclass[]{book}
+\documentclass[draft]{book}
 
 \usepackage{graphicx}
 
@@ -364,7 +364,7 @@ Mis amados viejitos, Osvaldo Concha Silva and Nelly del Carmen Sep\'ulveda Reyes
 %\bibliographystyle{unsrtnat}
 \bibliographystyle{apalike}
 
-\bibliography{C:/Users/Aixa/Documents/Javier/Latex/javier_bib}
+\bibliography{C:/Users/Aixa/Documents/Javier/Latex/ThesisPhD/javier_bib}
 
 \printindex
 
